# trustless

./: README.md  clustering_note.md  main.ipynb  sft_evaluation.md  sft_process.md
context_aware/: debug_for_memory.md
pdp_agent_langgraph/: .env.example  .gitignore  README.md  harness_results.json  pyproject.toml
pdp_agent_langgraph/docs/: agent_graph.mmd  harness_reasoning.md
pdp_agent_langgraph/scripts/: render_graph.py
pdp_agent_langgraph/src/zt_pdp/: __init__.py  agent.py  cli.py  config.py  harness.py  llm_validator.py  memory.py  nodes.py  patterns.py  procedural.py  schemas.py
pdp_agent_langgraph/tests/: conftest.py  test_agent_offline.py  test_patterns.py  test_procedural.py
pdp_training/: .gitignore  README.md  planning.md
pdp_training/eval/: README_remote_benchmark.md  aggregate_ztn_metrics.py  evaluation.sh  plot_ztn_metrics.py  prepare_ztn_eval_sets.py  run_ztn_eval.py  ztn_eval_lib.py
pdp_training/eval/outputs/: analysis.md
pdp_training/eval/outputs/core_balanced/: A_r8_a16_lr2e4.jsonl  A_r8_a16_lr2e4.meta.json  B_r32_a64_lr2e4.jsonl  B_r32_a64_lr2e4.meta.json  C_r8_a16_lr5e5.jsonl  C_r8_a16_lr5e5.meta.json  base.jsonl  base.meta.json  confusion_core_balanced_A_r8_a16_lr2e4.csv  confusion_core_balanced_B_r32_a64_lr2e4.csv  confusion_core_balanced_C_r8_a16_lr5e5.csv  confusion_core_balanced_base.csv  (+2 more)
pdp_training/notes/: lora_comparison_planning.md  sft_process_2.md
pdp_training/visualization/: SKILL.md  index.html  regenerate_figures.py
pep_openwebui/: custom_data_pipeline.md  fix_zt_pep_filter.md  test_data.md  zt_pep_filter.py
(+27 files in other folders)
