[project]
name = "zt-pdp-agent"
version = "0.1.0"
description = "Zero Trust Memory-Aware Policy Decision Point — LangGraph agent for Week 8 Task 3"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "vanillasky" },
]
license = { text = "MIT" }
keywords = ["zero-trust", "pdp", "langgraph", "langmem", "cybersecurity", "agent"]

dependencies = [
    "langgraph>=0.2.50",
    "langmem>=0.0.20",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
zt-harness = "zt_pdp.harness:main"
zt-cli = "zt_pdp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zt_pdp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
